--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>{BETA}Smart skins</title>
+<link rel="stylesheet" type="text/css" href="style.css"
 </head>
 <body bgcolor="black">
 <body text="white">
@@ -11,10 +12,9 @@
 <p><span style="font-size: 50px;">making life ez for epic gamers only</p>
 <button type="DrEinstein_Button"><a href="https://discord.gg/SAb56Jp" rel="noopener noreferrer" target="_blank">JOIN MY DISCORD BY CLICKING HERE!</a></button>
 <p><br></p>
-<button type="button"><a href="Main skins.html">Got to main skin page</a></p></button>
-<button type="button"><a href="credits.html">Go to credits Page</a></p></button>  
-<p><br><p>
-<p><span style="font-size: 60;">NEW UPDATED SKIN PACK COMING SOON + MORE UPDATES TO THIS WEBSITE!</span></p>
+<a href="Main skins.html"><button>Got to main skin page</button></a>
+<a href="credits.html"><button>go to credits page</button></a>
+<p><span style="color: cornflowerblue; font-size: 38;">NEW UPDATED SKIN PACK COMING SOON + MORE UPDATES TO THIS WEBSITE!</span></p>
 </body>
 
 <html>
