added css better buttons coming soon

--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <DOCTYPE html></DOCTYPE>
 <html>
 <head>
-<title>{BETA}Smart skins</title>
-<link rel="stylesheet" type="text/css" href="style.css"
+<title>Smart skins</title>
+<link rel="stylesheet" href="style.css"
 </head>
 <body bgcolor="black">
 <body text="white">
 <body style="background: url(https://iogames.space/sites/default/files/pic_1.jpg);">
 <div style="background-image: url('shellshock.png');"></div>
-<h1><span style="font-size: 50px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;WELCOME TO SMART SHELLSHOCK SKINS!</h1></h1>
-<p><span style="font-size: 50px;">making life ez for epic gamers only</p>
-<button type="DrEinstein_Button"><a href="https://discord.gg/SAb56Jp" rel="noopener noreferrer" target="_blank">JOIN MY DISCORD BY CLICKING HERE!</a></button>
+<h1 class="title">WELCOME TO SMART SHELLSHOCK SKINS!</h1>
+<p class="Paragraph">making life ez for epic gamers only</p>
+<a href="https://discord.gg/SAb56Jp"><button>visit my discord server</button></a>
 <p><br></p>
-<a href="Main skins.html"><button>Got to main skin page</button></a>
+<a href="Main skins.html"><button>Got to main skin page</button></a> 
 <a href="credits.html"><button>go to credits page</button></a>
-<p><span style="color: cornflowerblue; font-size: 38;">NEW UPDATED SKIN PACK COMING SOON + MORE UPDATES TO THIS WEBSITE!</span></p>
+<p>NEW UPDATED SKIN PACK COMING SOON + MORE UPDATES TO THIS WEBSITE!</p>
 </body>
+
 
 <html>
